solved some problems that prevented the project to be started with tomcat7:run : - gave a provided scope to javax.servlet-api - commented all "extends AbstractAnnotationConfigDispatcherServletInitializer" 	except the one in use

--- a/src/main/webapp/WEB-INF/views/_02/_05/_03/_01/spittles.html
+++ b/src/main/webapp/WEB-INF/views/_02/_05/_03/_01/spittles.html
@@ -10,7 +10,7 @@
     </script>
     <script type="text/javascript" src="WEB-INF/js/libraries/main.js"></script>
 </head>
-<body>
-
-</body>
+    <body>
+        Coucou
+    </body>
 </html>
