--- a/src/main/webapp/WEB-INF/views/_02/_05/_03/_01/spittles.html
+++ b/src/main/webapp/WEB-INF/views/_02/_05/_03/_01/spittles.html
@@ -6,11 +6,22 @@
     <script type="text/javascript" src="WEB-INF/js/libraries/handlebars.js"></script>
     <script type="text/javascript" src="WEB-INF/js/libraries/jquery.js"></script>
     <script type="text/x-handlebars-template" id="template">
-
+        <ul>
+            {{#each spittleList}}
+                <li id="spittle_{{id}}">
+                    <div class="spittleMessage">{{message}}</div>
+                    <div>
+                        <span class="spittleTime">{{time}}</span><span class="spittleLocation"> ({{latitude}},{{longitude}})</span>
+                    </div>
+                </li>
+            {{/each}}
+        </ul>
     </script>
     <script type="text/javascript" src="WEB-INF/js/libraries/main.js"></script>
+    <link rel="stylesheet" type="text/css" href="/resources/style.css"/>
 </head>
     <body>
-        Coucou
+        <a href="/spittles">Spittles</a> |
+        <a href="/spitter/register">Register</a>
     </body>
 </html>
